CompiladoresMain/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : lista_sentencias

   2  lista_sentencias : lista_sentencias sentencia
   3                   | sentencia

   4  sentencia : definicion
   5            | instruccion

   6  definicion : tipo IDENTIFICADOR resto_definicion

   7  resto_definicion : '(' parametros_formales ')' bloque_ejecutable
   8                   | resto_variables

   9  resto_variables : lista_variables_cont PUNTOYCOMA

  10  lista_variables_cont : COMA lista_variables
  11                       |

  12  lista_variables : IDENTIFICADOR
  13                  | IDENTIFICADOR COMA lista_variables

  14  parametros_formales :
  15                      | lista_parametros

  16  lista_parametros : parametro
  17                   | lista_parametros COMA parametro

  18  parametro : tipo IDENTIFICADOR

  19  tipo : TIPO_INT
  20       | TIPO_FLOAT
  21       | TIPO_STRING

  22  instruccion : bloque_ejecutable
  23              | expresion PUNTOYCOMA
  24              | RETURN expresion PUNTOYCOMA
  25              | PRINT expresion PUNTOYCOMA
  26              | INPUT IDENTIFICADOR PUNTOYCOMA
  27              | IF expresion bloque_ejecutable else_opcional
  28              | WHILE expresion bloque_ejecutable
  29              | FOR PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable

  30  else_opcional :
  31                | ELSE bloque_ejecutable

  32  bloque_ejecutable : LLAVE_A lista_sentencias LLAVE_C

  33  expresion : expresion MAS termino
  34            | expresion MENOS termino
  35            | termino

  36  termino : termino MULT factor
  37          | termino DIV factor
  38          | factor

  39  factor : NUMERO
  40         | CADENA
  41         | IDENTIFICADOR
  42         | invocacion
  43         | PARENTESIS_A expresion PARENTESIS_C
  44         | LITERAL_TRUE
  45         | LITERAL_FALSE

  46  invocacion : IDENTIFICADOR PARENTESIS_A lista_argumentos PARENTESIS_C

  47  lista_argumentos :
  48                   | lista_argumentos_no_vacia

  49  lista_argumentos_no_vacia : expresion
  50                            | lista_argumentos_no_vacia COMA expresion

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	RETURN  shift 10
	PRINT  shift 11
	INPUT  shift 12
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	LLAVE_A  shift 16
	.  error

	programa  goto 17
	lista_sentencias  goto 18
	sentencia  goto 19
	definicion  goto 20
	instruccion  goto 21
	tipo  goto 22
	bloque_ejecutable  goto 23
	expresion  goto 24
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 1
	factor : IDENTIFICADOR .  (41)
	invocacion : IDENTIFICADOR . PARENTESIS_A lista_argumentos PARENTESIS_C  (46)

	PARENTESIS_A  shift 28
	MAS  reduce 41
	MENOS  reduce 41
	MULT  reduce 41
	DIV  reduce 41
	PUNTOYCOMA  reduce 41
	COMA  reduce 41
	PARENTESIS_C  reduce 41
	LLAVE_A  reduce 41


state 2
	factor : NUMERO .  (39)

	.  reduce 39


state 3
	factor : CADENA .  (40)

	.  reduce 40


state 4
	tipo : TIPO_INT .  (19)

	.  reduce 19


state 5
	tipo : TIPO_FLOAT .  (20)

	.  reduce 20


state 6
	tipo : TIPO_STRING .  (21)

	.  reduce 21


state 7
	instruccion : IF . expresion bloque_ejecutable else_opcional  (27)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 29
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 8
	instruccion : WHILE . expresion bloque_ejecutable  (28)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 30
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 9
	instruccion : FOR . PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable  (29)

	PARENTESIS_A  shift 31
	.  error


state 10
	instruccion : RETURN . expresion PUNTOYCOMA  (24)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 32
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 11
	instruccion : PRINT . expresion PUNTOYCOMA  (25)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 33
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 12
	instruccion : INPUT . IDENTIFICADOR PUNTOYCOMA  (26)

	IDENTIFICADOR  shift 34
	.  error


state 13
	factor : LITERAL_TRUE .  (44)

	.  reduce 44


state 14
	factor : LITERAL_FALSE .  (45)

	.  reduce 45


state 15
	factor : PARENTESIS_A . expresion PARENTESIS_C  (43)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 35
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 16
	bloque_ejecutable : LLAVE_A . lista_sentencias LLAVE_C  (32)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	RETURN  shift 10
	PRINT  shift 11
	INPUT  shift 12
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	LLAVE_A  shift 16
	.  error

	lista_sentencias  goto 36
	sentencia  goto 19
	definicion  goto 20
	instruccion  goto 21
	tipo  goto 22
	bloque_ejecutable  goto 23
	expresion  goto 24
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 17
	$accept : programa . $end  (0)

	$end  accept


state 18
	programa : lista_sentencias .  (1)
	lista_sentencias : lista_sentencias . sentencia  (2)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	RETURN  shift 10
	PRINT  shift 11
	INPUT  shift 12
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	LLAVE_A  shift 16
	$end  reduce 1

	sentencia  goto 37
	definicion  goto 20
	instruccion  goto 21
	tipo  goto 22
	bloque_ejecutable  goto 23
	expresion  goto 24
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 19
	lista_sentencias : sentencia .  (3)

	.  reduce 3


state 20
	sentencia : definicion .  (4)

	.  reduce 4


state 21
	sentencia : instruccion .  (5)

	.  reduce 5


state 22
	definicion : tipo . IDENTIFICADOR resto_definicion  (6)

	IDENTIFICADOR  shift 38
	.  error


state 23
	instruccion : bloque_ejecutable .  (22)

	.  reduce 22


state 24
	instruccion : expresion . PUNTOYCOMA  (23)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PUNTOYCOMA  shift 41
	.  error


state 25
	expresion : termino .  (35)
	termino : termino . MULT factor  (36)
	termino : termino . DIV factor  (37)

	MULT  shift 42
	DIV  shift 43
	MAS  reduce 35
	MENOS  reduce 35
	PUNTOYCOMA  reduce 35
	COMA  reduce 35
	PARENTESIS_C  reduce 35
	LLAVE_A  reduce 35


state 26
	termino : factor .  (38)

	.  reduce 38


state 27
	factor : invocacion .  (42)

	.  reduce 42


state 28
	invocacion : IDENTIFICADOR PARENTESIS_A . lista_argumentos PARENTESIS_C  (46)
	lista_argumentos : .  (47)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	PARENTESIS_C  reduce 47

	expresion  goto 44
	termino  goto 25
	factor  goto 26
	invocacion  goto 27
	lista_argumentos  goto 45
	lista_argumentos_no_vacia  goto 46


state 29
	instruccion : IF expresion . bloque_ejecutable else_opcional  (27)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	LLAVE_A  shift 16
	.  error

	bloque_ejecutable  goto 47


state 30
	instruccion : WHILE expresion . bloque_ejecutable  (28)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	LLAVE_A  shift 16
	.  error

	bloque_ejecutable  goto 48


state 31
	instruccion : FOR PARENTESIS_A . expresion PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable  (29)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 49
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 32
	instruccion : RETURN expresion . PUNTOYCOMA  (24)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PUNTOYCOMA  shift 50
	.  error


state 33
	instruccion : PRINT expresion . PUNTOYCOMA  (25)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PUNTOYCOMA  shift 51
	.  error


state 34
	instruccion : INPUT IDENTIFICADOR . PUNTOYCOMA  (26)

	PUNTOYCOMA  shift 52
	.  error


state 35
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)
	factor : PARENTESIS_A expresion . PARENTESIS_C  (43)

	MAS  shift 39
	MENOS  shift 40
	PARENTESIS_C  shift 53
	.  error


state 36
	lista_sentencias : lista_sentencias . sentencia  (2)
	bloque_ejecutable : LLAVE_A lista_sentencias . LLAVE_C  (32)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	IF  shift 7
	WHILE  shift 8
	FOR  shift 9
	RETURN  shift 10
	PRINT  shift 11
	INPUT  shift 12
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	LLAVE_A  shift 16
	LLAVE_C  shift 54
	.  error

	sentencia  goto 37
	definicion  goto 20
	instruccion  goto 21
	tipo  goto 22
	bloque_ejecutable  goto 23
	expresion  goto 24
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 37
	lista_sentencias : lista_sentencias sentencia .  (2)

	.  reduce 2


state 38
	definicion : tipo IDENTIFICADOR . resto_definicion  (6)
	lista_variables_cont : .  (11)

	COMA  shift 55
	'('  shift 56
	PUNTOYCOMA  reduce 11

	resto_definicion  goto 57
	resto_variables  goto 58
	lista_variables_cont  goto 59


state 39
	expresion : expresion MAS . termino  (33)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	termino  goto 60
	factor  goto 26
	invocacion  goto 27


state 40
	expresion : expresion MENOS . termino  (34)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	termino  goto 61
	factor  goto 26
	invocacion  goto 27


state 41
	instruccion : expresion PUNTOYCOMA .  (23)

	.  reduce 23


state 42
	termino : termino MULT . factor  (36)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	factor  goto 62
	invocacion  goto 27


state 43
	termino : termino DIV . factor  (37)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	factor  goto 63
	invocacion  goto 27


state 44
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)
	lista_argumentos_no_vacia : expresion .  (49)

	MAS  shift 39
	MENOS  shift 40
	COMA  reduce 49
	PARENTESIS_C  reduce 49


state 45
	invocacion : IDENTIFICADOR PARENTESIS_A lista_argumentos . PARENTESIS_C  (46)

	PARENTESIS_C  shift 64
	.  error


state 46
	lista_argumentos : lista_argumentos_no_vacia .  (48)
	lista_argumentos_no_vacia : lista_argumentos_no_vacia . COMA expresion  (50)

	COMA  shift 65
	PARENTESIS_C  reduce 48


state 47
	instruccion : IF expresion bloque_ejecutable . else_opcional  (27)
	else_opcional : .  (30)

	ELSE  shift 66
	$end  reduce 30
	IDENTIFICADOR  reduce 30
	NUMERO  reduce 30
	CADENA  reduce 30
	TIPO_INT  reduce 30
	TIPO_FLOAT  reduce 30
	TIPO_STRING  reduce 30
	IF  reduce 30
	WHILE  reduce 30
	FOR  reduce 30
	RETURN  reduce 30
	PRINT  reduce 30
	INPUT  reduce 30
	LITERAL_TRUE  reduce 30
	LITERAL_FALSE  reduce 30
	PARENTESIS_A  reduce 30
	LLAVE_A  reduce 30
	LLAVE_C  reduce 30

	else_opcional  goto 67


state 48
	instruccion : WHILE expresion bloque_ejecutable .  (28)

	.  reduce 28


state 49
	instruccion : FOR PARENTESIS_A expresion . PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable  (29)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PUNTOYCOMA  shift 68
	.  error


state 50
	instruccion : RETURN expresion PUNTOYCOMA .  (24)

	.  reduce 24


state 51
	instruccion : PRINT expresion PUNTOYCOMA .  (25)

	.  reduce 25


state 52
	instruccion : INPUT IDENTIFICADOR PUNTOYCOMA .  (26)

	.  reduce 26


state 53
	factor : PARENTESIS_A expresion PARENTESIS_C .  (43)

	.  reduce 43


state 54
	bloque_ejecutable : LLAVE_A lista_sentencias LLAVE_C .  (32)

	.  reduce 32


state 55
	lista_variables_cont : COMA . lista_variables  (10)

	IDENTIFICADOR  shift 69
	.  error

	lista_variables  goto 70


state 56
	resto_definicion : '(' . parametros_formales ')' bloque_ejecutable  (7)
	parametros_formales : .  (14)

	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	')'  reduce 14

	tipo  goto 71
	parametros_formales  goto 72
	lista_parametros  goto 73
	parametro  goto 74


state 57
	definicion : tipo IDENTIFICADOR resto_definicion .  (6)

	.  reduce 6


state 58
	resto_definicion : resto_variables .  (8)

	.  reduce 8


state 59
	resto_variables : lista_variables_cont . PUNTOYCOMA  (9)

	PUNTOYCOMA  shift 75
	.  error


state 60
	expresion : expresion MAS termino .  (33)
	termino : termino . MULT factor  (36)
	termino : termino . DIV factor  (37)

	MULT  shift 42
	DIV  shift 43
	MAS  reduce 33
	MENOS  reduce 33
	PUNTOYCOMA  reduce 33
	COMA  reduce 33
	PARENTESIS_C  reduce 33
	LLAVE_A  reduce 33


state 61
	expresion : expresion MENOS termino .  (34)
	termino : termino . MULT factor  (36)
	termino : termino . DIV factor  (37)

	MULT  shift 42
	DIV  shift 43
	MAS  reduce 34
	MENOS  reduce 34
	PUNTOYCOMA  reduce 34
	COMA  reduce 34
	PARENTESIS_C  reduce 34
	LLAVE_A  reduce 34


state 62
	termino : termino MULT factor .  (36)

	.  reduce 36


state 63
	termino : termino DIV factor .  (37)

	.  reduce 37


state 64
	invocacion : IDENTIFICADOR PARENTESIS_A lista_argumentos PARENTESIS_C .  (46)

	.  reduce 46


state 65
	lista_argumentos_no_vacia : lista_argumentos_no_vacia COMA . expresion  (50)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 76
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 66
	else_opcional : ELSE . bloque_ejecutable  (31)

	LLAVE_A  shift 16
	.  error

	bloque_ejecutable  goto 77


state 67
	instruccion : IF expresion bloque_ejecutable else_opcional .  (27)

	.  reduce 27


state 68
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA . expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable  (29)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 78
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 69
	lista_variables : IDENTIFICADOR .  (12)
	lista_variables : IDENTIFICADOR . COMA lista_variables  (13)

	COMA  shift 79
	PUNTOYCOMA  reduce 12


state 70
	lista_variables_cont : COMA lista_variables .  (10)

	.  reduce 10


state 71
	parametro : tipo . IDENTIFICADOR  (18)

	IDENTIFICADOR  shift 80
	.  error


state 72
	resto_definicion : '(' parametros_formales . ')' bloque_ejecutable  (7)

	')'  shift 81
	.  error


state 73
	parametros_formales : lista_parametros .  (15)
	lista_parametros : lista_parametros . COMA parametro  (17)

	COMA  shift 82
	')'  reduce 15


state 74
	lista_parametros : parametro .  (16)

	.  reduce 16


state 75
	resto_variables : lista_variables_cont PUNTOYCOMA .  (9)

	.  reduce 9


state 76
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)
	lista_argumentos_no_vacia : lista_argumentos_no_vacia COMA expresion .  (50)

	MAS  shift 39
	MENOS  shift 40
	COMA  reduce 50
	PARENTESIS_C  reduce 50


state 77
	else_opcional : ELSE bloque_ejecutable .  (31)

	.  reduce 31


state 78
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA expresion . PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable  (29)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PUNTOYCOMA  shift 83
	.  error


state 79
	lista_variables : IDENTIFICADOR COMA . lista_variables  (13)

	IDENTIFICADOR  shift 69
	.  error

	lista_variables  goto 84


state 80
	parametro : tipo IDENTIFICADOR .  (18)

	.  reduce 18


state 81
	resto_definicion : '(' parametros_formales ')' . bloque_ejecutable  (7)

	LLAVE_A  shift 16
	.  error

	bloque_ejecutable  goto 85


state 82
	lista_parametros : lista_parametros COMA . parametro  (17)

	TIPO_INT  shift 4
	TIPO_FLOAT  shift 5
	TIPO_STRING  shift 6
	.  error

	tipo  goto 71
	parametro  goto 86


state 83
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA . expresion PARENTESIS_C bloque_ejecutable  (29)

	IDENTIFICADOR  shift 1
	NUMERO  shift 2
	CADENA  shift 3
	LITERAL_TRUE  shift 13
	LITERAL_FALSE  shift 14
	PARENTESIS_A  shift 15
	.  error

	expresion  goto 87
	termino  goto 25
	factor  goto 26
	invocacion  goto 27


state 84
	lista_variables : IDENTIFICADOR COMA lista_variables .  (13)

	.  reduce 13


state 85
	resto_definicion : '(' parametros_formales ')' bloque_ejecutable .  (7)

	.  reduce 7


state 86
	lista_parametros : lista_parametros COMA parametro .  (17)

	.  reduce 17


state 87
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA expresion . PARENTESIS_C bloque_ejecutable  (29)
	expresion : expresion . MAS termino  (33)
	expresion : expresion . MENOS termino  (34)

	MAS  shift 39
	MENOS  shift 40
	PARENTESIS_C  shift 88
	.  error


state 88
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C . bloque_ejecutable  (29)

	LLAVE_A  shift 16
	.  error

	bloque_ejecutable  goto 89


state 89
	instruccion : FOR PARENTESIS_A expresion PUNTOYCOMA expresion PUNTOYCOMA expresion PARENTESIS_C bloque_ejecutable .  (29)

	.  reduce 29


43 terminals, 22 nonterminals
51 grammar rules, 90 states
